# openapi/openapi.yaml
@@ -35,7 +35,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Message'
-  /messages/{id}:              
+  /messages/{id}:
     patch:
       summary: Update message by id
       tags:
@@ -81,8 +81,92 @@ paths:
           description: Message deleted  successfully
         '404':
           description: Message not found
+  /users:
+    get:
+      summary: Get all users
+      tags:
+        - users
+      responses:
+        '200':
+          description: A list of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+    post:
+      summary: Create a new user
+      tags:
+        - users
+      requestBody:
+        description: user to create
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '201':
+          description: created user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+  /users/{id}:
+    patch:
+      summary: Update user by id
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: Id of the user to update
+          schema:
+            type: integer
+            format: uint
+      requestBody:
+        description: The updated user data
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '200':
+          description: Updated user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '404':
+          description: User not found
+    delete:
+      summary: Delete user by id
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: Id of the user to update
+          schema:
+            type: integer
+            format: uint
+      requestBody:
+        description: The updated user data
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '204':
+          description: User deleted successfully
+        '404':
+          description: User not found
 
-              
 components:
   schemas:
     Message:
@@ -90,6 +174,21 @@ components:
       properties:
         id:
           type: integer
-          format: uint 
+          format: uint
         message:
           type: string
+    User:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: uint
+        email:
+          type: string
+          format: email
+        password:
+          type: string
+          format: password
+      required:
+        - email
+        - password
